# rust_server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
src/: db.rs  main.rs
src/enums/: doc_type.rs
src/handlers/: doc_handler.rs  mod.rs
src/models/: document.rs
src/routes/: routes.rs
