[package]
name = "server"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "server"
path = "./src/main.rs"

[dependencies]
actix-web = "4.0"
mongodb = "2.0"
dotenv = "0.15.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.197", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
actix-multipart = "0.6.1"
chrono = "0.4.37"
futures = "0.3.30"
serde_json = "1.0.115"
urlencoding = "2.1.3"
actix-files = "0.6.5"
uuid = "1.8.0"
actix-cors = "0.7.0"
